Fixed webpage link

--- a/LoadingScreenSkip/ReleaseFiles/ReleaseConfig.config
+++ b/LoadingScreenSkip/ReleaseFiles/ReleaseConfig.config
@@ -30,7 +30,7 @@ PluginOriginalAuthor=18107
 PluginAuthors=18107, Dragon
 
 ; WebpageLink - Used by manifest for thunderstore page. Can be left blank.
-WebpageLink=https://thunderstore.io/c/void-crew/p/VoidCrewModdingTeam/LoadingScreenSkip/
+WebpageLink=https://github.com/Void-Crew-Modding-Team/LoadingScreenSkip
 
 ; ThunderStore ID (https://thunderstore.io/c/void-crew/p/VoidCrewModdingTeam/VoidManager/ the section equivelant to 'VoidCrewModdingTeam/VoidManager'). Can be left blank, may be utilized by VoidManager for a future feature.
 ThunderstoreID=VoidCrewModdingTeam/Loading_Screen_Skipper
